--- a/MyWebApplication/Areas/HelpPage/Views/Help/Api.cshtml
+++ b/MyWebApplication/Areas/HelpPage/Views/Help/Api.cshtml
@@ -1,5 +1,5 @@
 @using System.Web.Http
-@using MyWebApplication.Areas.HelpPage.Models
+@using ReportGenerator.Areas.HelpPage.Models
 @model HelpPageApiModel
 
 @{
