--- a/MyWebApplication/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
+++ b/MyWebApplication/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
@@ -1,7 +1,7 @@
 @using System.Web.Http
 @using System.Web.Http.Description
-@using MyWebApplication.Areas.HelpPage.Models
-@using MyWebApplication.Areas.HelpPage.ModelDescriptions
+@using ReportGenerator.Areas.HelpPage.Models
+@using ReportGenerator.Areas.HelpPage.ModelDescriptions
 @model HelpPageApiModel
 
 @{
