--- a/MyWebApplication/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
+++ b/MyWebApplication/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
@@ -1,4 +1,4 @@
-@using MyWebApplication.Areas.HelpPage
+@using ReportGenerator.Areas.HelpPage
 @model InvalidSample
 
 @if (HttpContext.Current.IsDebuggingEnabled)
