--- a/MyWebApplication/Areas/HelpPage/Views/Help/DisplayTemplates/ModelDescriptionLink.cshtml
+++ b/MyWebApplication/Areas/HelpPage/Views/Help/DisplayTemplates/ModelDescriptionLink.cshtml
@@ -1,4 +1,4 @@
-@using MyWebApplication.Areas.HelpPage.ModelDescriptions
+@using ReportGenerator.Areas.HelpPage.ModelDescriptions
 @model Type
 @{
     ModelDescription modelDescription = ViewBag.modelDescription;
