--- a/MyWebApplication/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/MyWebApplication/Areas/HelpPage/Views/Help/Index.cshtml
@@ -2,7 +2,7 @@
 @using System.Web.Http.Controllers
 @using System.Web.Http.Description
 @using System.Collections.ObjectModel
-@using MyWebApplication.Areas.HelpPage.Models
+@using ReportGenerator.Areas.HelpPage.Models
 @model Collection<ApiDescription>
 
 @{
