--- a/MyWebApplication/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
+++ b/MyWebApplication/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
@@ -1,8 +1,8 @@
 @using System.Web.Http
 @using System.Web.Http.Controllers
 @using System.Web.Http.Description
-@using MyWebApplication.Areas.HelpPage
-@using MyWebApplication.Areas.HelpPage.Models
+@using ReportGenerator.Areas.HelpPage
+@using ReportGenerator.Areas.HelpPage.Models
 @model IGrouping<HttpControllerDescriptor, ApiDescription>
 
 @{
