--- a/MyWebApplication/Areas/HelpPage/Views/Help/DisplayTemplates/EnumTypeModelDescription.cshtml
+++ b/MyWebApplication/Areas/HelpPage/Views/Help/DisplayTemplates/EnumTypeModelDescription.cshtml
@@ -1,4 +1,4 @@
-@using MyWebApplication.Areas.HelpPage.ModelDescriptions
+@using ReportGenerator.Areas.HelpPage.ModelDescriptions
 @model EnumTypeModelDescription
 
 <p>Possible enumeration values:</p>
