--- a/MyWebApplication/Areas/HelpPage/Views/Help/ResourceModel.cshtml
+++ b/MyWebApplication/Areas/HelpPage/Views/Help/ResourceModel.cshtml
@@ -1,5 +1,5 @@
 @using System.Web.Http
-@using MyWebApplication.Areas.HelpPage.ModelDescriptions
+@using ReportGenerator.Areas.HelpPage.ModelDescriptions
 @model ModelDescription
 
 <link type="text/css" href="~/Areas/HelpPage/HelpPage.css" rel="stylesheet" />
